--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /warm-up/3b-9-sum-in-rectangle.js
 /warm-up/3b-5-good-string.js
 /warm-up/3b-6-operating-system-lite.js
+
+#queues
+/queues/3b-17-drinking-game.js
+/queues/3b-16-deque.js
+/queues/3b-16-to-hip.js
+/queues/3b-16-heapsort.js
