--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /warm-up/3b-4-test.js
 /warm-up/3b-9-sum-in-rectangle.js
 /warm-up/3b-6-operating-system-lite.js
+
+#dynamic-programming-1
+/dynamic-programming-1/3b-22-grig.js
+/dynamic-programming-1/3b-23-calculator.js
+/dynamic-programming-1/3b-24-buying-tickets.js
+/dynamic-programming-1/3b-25-cloves.js
