--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /graphs-bfs/3b-38-fleas.js
 /graphs-bfs/3b-39-cavers-path.js
 /graphs-bfs/3b-40-subway.js
+
+#sprint
+/sprint/3b-a-undeground-delivery.js
