refactor: edit text of the problem

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,5 @@
 /graphs-bfs/3b-40-subway.js
 
 #sprint
-/sprint/3b-b-undeground-delivery.js
+/sprint/3b-b-effective-management.js
+/sprint/3b-c-delivery.js
